--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
   "devDependencies": {
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
+    "@types/node": "^14.14.41",
+    "@types/yargs": "^16.0.1",
     "chai": "^4.3.0",
-    "eslint": "^7.21.0",
-    "eslint-config-google": "^0.14.0",
     "mocha": "^8.3.0",
     "nyc": "^15.1.0",
     "ts-node": "^9.1.1",
     "tsc-watch": "^4.2.9",
     "typedoc": "^0.20.28",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "chalk": "^4.1.1",
+    "yargs": "^16.2.0"
   }
 }
